tests/ui/borrowck/borrowck-match-uninitialized.stderr
error[E0381]: used binding `x` isn't initialized on any path leading to this point
  --> $DIR/borrowck-match-uninitialized.rs:6:29
   |
LL |     let x;
   |         - binding declared here but left uninitialized
...
LL |         false => println!("{x}")
   |                             ^ `x` used here but it isn't initialized on any path leading to this point
   |
help: consider assigning a value
   |
LL |     let x = 42;
   |           ++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
